--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
-    <!--<servlet>-->
-        <!--<servlet-name>posts</servlet-name>-->
-        <!--<servlet-class>com.primitive_social_media.posts.PostsServlet</servlet-class>-->
-    <!--</servlet>-->
-    <!--<servlet-mapping>-->
-        <!--<servlet-name>posts</servlet-name>-->
-        <!--<url-pattern>/posts</url-pattern>-->
-    <!--</servlet-mapping>-->
+    <servlet>
+        <servlet-name>posts</servlet-name>
+        <servlet-class>com.primitive_social_media.posts.PostsServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>posts</servlet-name>
+        <url-pattern>/posts</url-pattern>
+    </servlet-mapping>
 
     <servlet>
         <servlet-name>users</servlet-name>
